--- a/src/.env
+++ b/src/.env
@@ -1,1 +1,2 @@
 MONGODBURI = "mongodb+srv://roshanbadola06:x34dVD5DgOyWQ93B@cluster0.wfca9ph.mongodb.net/"
+RESEND_API_KEY="re_fyzJh7B4_GFWh4E7Tmv1xL3ZpF1UpRJSg"
