--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-email/components": "0.0.17",
     "mongoose": "^8.3.3",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-email": "2.1.2",
+    "resend": "^3.2.0",
     "zod": "^3.23.6"
   },
   "devDependencies": {
